1.8.9.dev0
 * #311: Add custom dump/restore command options for MySQL and MariaDB.
 * #827: When the "--json" flag is given, suppress console escape codes so as not to
   interfere with JSON output.
 * #829: Fix "--override" values containing deprecated section headers not actually overriding
   configuration options under deprecated section headers.
 * #835: Add support for the NO_COLOR environment variable. See the documentation for more
   information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#colored-output
 * #839: Add log sending for the Apprise logging hook, enabled by default. See the documentation for
   more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#apprise-hook
 * #839: Document a potentially breaking shell quoting edge case within error hooks:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#error-hooks
 * #840: When running the "rcreate" action and the repository already exists but with a different
   encryption mode than requested, error.
 * Switch from Drone to Gitea Actions for continuous integration.
 * Rename scripts/run-end-to-end-dev-tests to scripts/run-end-to-end-tests and use it in both dev
   and CI for better dev-CI parity.
 * Clarify documentation about restoring a database: borgmatic does not create the database upon
   restore.

1.8.8
 * #370: For the PostgreSQL hook, pass the "PGSSLMODE" environment variable through to Borg when the
   database's configuration omits the "ssl_mode" option.
 * #818: Allow the "--repository" flag to match across multiple configuration files.
 * #820: Fix broken repository detection in the "rcreate" action with Borg 1.4. The issue did not
   occur with other versions of Borg.
 * #822: Fix broken escaping logic in the PostgreSQL hook's "pg_dump_command" option.
 * SECURITY: Prevent additional shell injection attacks within the PostgreSQL hook.

1.8.7